--- a/employee-system-api/src/main/resources/application.properties
+++ b/employee-system-api/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=employee-system-api
+
+# Server configuration
+server.port=8080
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system
+spring.datasource.username=shreyash
+spring.datasource.password=linux
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+
+
+# Logging configuration
+logging.level.org.springframework=INFO
+logging.level.com.yourpackage=DEBUG
+
+
